--- a/omoore2_mission9/Views/_ViewImports.cshtml
+++ b/omoore2_mission9/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @addTagHelper *, omoore2_mission9
 @using omoore2_mission9.Models
 @using omoore2_mission9.Models.ViewModels
+@using omoore2_mission9.Infrastructure 
