--- a/omoore2_mission9/Views/Home/Index.cshtml
+++ b/omoore2_mission9/Views/Home/Index.cshtml
@@ -9,22 +9,8 @@
 
 @foreach (Book b in Model.Books)
 {
-<div class="card card-outline-primary m-1 p-1">
-    <div class="bg-faded p-1">
-        <h4>
-            @b.Title
-            <span class="badge badge-pill badge-primary" style="float:right">
-                <small>@b.Price.ToString("c")</small>
-            </span>
-        </h4>
-    </div>
-    <div class="card-text p-1">Author: @b.Author</div>
-    <div class="card-text p-1">Publisher: @b.Publisher</div>
-    <div class="card-text p-1">ISN: @b.ISBN</div>
-    <div class="card-text p-1">Classification: @b.Classification</div>
-    <div class="card-text p-1">Category: @b.Category</div>
-    <div class="card-text p-1">Page Count: @b.PageCount</div>
-</div><br /><br />
+    <partial name="BookSummary" model="b" />
+
 }
 <div page-blah="@Model.PageInfo" page-action="Index" page-classes-enabled="true"
      page-class="btn" page-class-normal="btn-outline-dark"
