--- a/omoore2_mission9/Pages/_BasketLayout.cshtml
+++ b/omoore2_mission9/Pages/_BasketLayout.cshtml
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="bg-dark text-white p-2">
-        book store
+        <span class="navbar-brand ml-2 ">book store</span>
     </div>
     <div class="m-1 p-1">
         @RenderBody()
