--- a/omoore2_mission9/Views/Shared/BookSummary.cshtml
+++ b/omoore2_mission9/Views/Shared/BookSummary.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+This page manages the partial view for the main index page
+    *@
 @{
 
 }
