--- a/omoore2_mission9/Views/Shared/_Layout.cshtml
+++ b/omoore2_mission9/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+<head><!--Main HTML layout skeleton-->
     <meta name="viewport" content="width=device-width" />
     <title>BookStore</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -8,10 +8,9 @@
 </head>
 <body>
     <div class="bg-dark text-white p-2">
-        <span class="navbar-brand ml-2">book store</span>
+        <span class="navbar-brand ml-2">book store</span><span></span>
         <a asp-page="/Basket">
-            <img src="~/cart.png" style="width:50px; float:right;"/>
-            <h1>@Model.basket.Items?.Any() != true)</h1>
+            <img src="~/cart.png" class="img-thumbnail" style="width:50px; float:right;" />
         </a>
     </div>
     <div class="row m-1 p-1">
