--- a/omoore2_mission9/Pages/Basket.cshtml
+++ b/omoore2_mission9/Pages/Basket.cshtml
@@ -24,17 +24,24 @@ else
 
             @foreach (var i in Model.basket.Items)
             {
-                <tr>
-                    <td>@i.Book.Title</td>
-                    <td>
-                        @i.Quantity &nbsp;
+            <tr>
+                <td>@i.Book.Title</td>
+                <td>
+                    @i.Quantity &nbsp;
 
-                    </td>
+                </td>
 
-                    <td>@i.Price</td>
-                    <td>@(i.Quantity * i.Price)</td>
+                <td>@(i.Price.ToString("c"))</td>
+                <td>@(i.Quantity * i.Price)</td>
 
-                </tr>
+                <td class="text-center">
+                    <form method="post" asp-page-handler="Remove">
+                        <input type="hidden" name="bookID" value="@i.Book.BookID" />
+                        <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
+                        <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                    </form>
+                </td>
+            </tr>
             }
         </tbody>
         <tfoot>
@@ -47,4 +54,6 @@ else
 }
 <div>
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
+    <a class="btn btn-primary" asp-action="Checkout" asp-controller="Purchase">Checkout</a>
+
 </div>
